--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,6 +8,11 @@
   height: 100%;
   background: linear-gradient(to right, #ffc3a0  , #ffafbd );
   overflow: hidden;
+  z-index: 1;
+
+  *{
+    z-index: 1;
+  }
 }
 
 .loader-text {
@@ -702,6 +707,21 @@ a {
 
 .folder-tree {
   margin-top: 1rem;
+}
+
+.folder-tree-info{
+  font-size: 0.8rem;
+  font-style: italic;
+  //background-color: #ffb13f;
+  width: 80%;
+  border-radius: 0.3rem;
+  margin: 3rem auto 0;
+  padding: 0.5rem 0;
+  text-align: center;
+  font-weight: bold;
+  div{
+    margin-bottom: 0.5rem;
+  }
 }
 
 .tree-node > div {
@@ -1896,6 +1916,43 @@ a {
   }
 }
 
+
+/* --------mobile construction css-------------*/
+.mobile-construction-wrapper{
+
+  .mobile-construction-main{
+
+    &.grid-wrapper {
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      //align-items: center;
+      //justify-items: center;
+    }
+    
+    div{
+      text-align: center;
+      font-family: OperatorMonoItalic, serif;
+
+      &.mobile-construction-img{
+        padding: 2rem 0;
+      }
+
+      &.mobile-construction-info{
+        padding: 0 2rem;
+      }
+    }
+
+    svg{
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    p{
+
+    }
+  }
+}
 
 
 
