--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1744,24 +1744,31 @@ a {
 /* --------Professional css-------------*/
 .professional-tab-wrapper {
   padding: 2rem 2rem;
+  height: 83%;
 
   .professional-tab-main {
     position: relative;
     border-radius: 0.5rem;
     background-color: #253253;
-    overflow-x: hidden;
-    overflow-y: auto;
-    display: flex;
-    align-items: center;
+    //overflow-x: hidden;
+    //overflow-y: auto;
+    //display: flex;
+    //align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0.8rem;
+    //grid-auto-rows: minmax(auto, 49%);
+    padding: 1rem 1rem 0;
   }
 
   .wint-wealth-exp {
-    position: absolute;
-    z-index: 5;
-    top: 5%;
-    left: 5%;
-    width: 50%;
-    height: 44%;
+    //position: absolute;
+    //z-index: 5;
+    //top: 5%;
+    //left: 5%;
+    //width: 50%;
+    //height: 45%;
+    height: auto;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     background-color: #131d3d;
@@ -1773,12 +1780,13 @@ a {
   }
 
   .scatter-exp {
-    position: absolute;
-    z-index: 5;
-    bottom: 5%;
-    left: 5%;
-    width: 50%;
-    height: 44%;
+    //position: absolute;
+    //z-index: 5;
+    //bottom: 5%;
+    //left: 5%;
+    //width: 50%;
+    //height: 45%;
+    height: 65%;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     background-color: #131d3d;
@@ -1790,12 +1798,14 @@ a {
   }
 
   .internship-exp {
-    position: absolute;
-    z-index: 5;
-    top: 5%;
-    right: 5%;
-    width: 35%;
-    height: 90%;
+    //position: absolute;
+    //z-index: 5;
+    //top: 5%;
+    //right: 5%;
+    //width: 40%;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    height: 80%;
     border-radius: 0.5rem;
     background-color: #131d3d;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
@@ -1806,13 +1816,13 @@ a {
     }
 
     .exp-card-header {
-      height: 7%;
+      height: 5%;
     }
   }
 
   .exp-card-header {
     width: 100%;
-    height: 15%;
+    height: 10%;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
     border-bottom: 1px solid #253253;
@@ -1825,7 +1835,7 @@ a {
 
   .exp-card-body {
     width: 100%;
-    height: 85%;
+    height: 90%;
     padding: 0.5rem 0 0.5rem 1rem;
     font-size: 0.8rem;
     color: white;
