--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,6 @@
 @import "./typography.css";
 @import "./animations.scss";
+@import "./constants.scss";
 
 /*----------initial page render css-*/
 .page-loader-wrapper {
@@ -297,19 +298,19 @@ a {
 
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  background-color: #fd154b;
+  background-color: $scrollbar-light-green;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 }
 
 ::-webkit-scrollbar {
   width: 12px;
-  background-color: #fd154b;
+  background-color: $scrollbar-light-green;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: #283255;
+  background-color: $scrollbar-dark-green;
   background-clip: padding-box;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 }
@@ -535,18 +536,7 @@ a {
 
 
 .landing-page-wrapper {
-  //background-color: #f1dfd1;
-  //background-color: #deebdd;
-  //background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
-
-  /* option2 */
-  //background-image: linear-gradient(315deg, #fd154b 0%, #fc9f6a 74%);
-
-  /* option 1*/
-  /* main option*/
-  background-image: linear-gradient(315deg, #fd154b 0%, #fa8f3d 100%);
-  //background-color: #d9e4f5;
-  //background-color: #2f4353;
+  background-color: #9BD3CB;
   overflow: hidden;
 
   .grid-wrapper {
@@ -596,7 +586,9 @@ a {
     height: 25rem;
     border-radius: 50%;
     //background-image: linear-gradient(315deg, #fd154b 0%, #fc6f60 74%);
-    background-image: linear-gradient(315deg, #fd154b 0%, #fa8f3d 150%);
+    //background-image: linear-gradient(315deg, #fd154b 0%, #fa8f3d 150%);
+    background-image: linear-gradient(315deg, #9bd3cb, #129a7d);
+    //background-color: #9bd3cb;
     box-shadow: 2px 5px 6px rgba(0, 0, 0, .3) inset;
     z-index: 2;
     animation: fadeIn 1.8s linear alternate forwards;
@@ -605,10 +597,7 @@ a {
 
 
 .landing-page-info {
-  //position: absolute;
   z-index: 1;
-  //top: 10rem;
-  //left: 10rem;
   font-family: Recoleta, serif;
   color: #1c233b;
 }
@@ -637,8 +626,6 @@ a {
 }
 
 .wobble-effect:hover {
-  /*color: #fd154b;*/
-  /*background: -webkit-linear-gradient(#ff003d, #ff6083);*/
   background: -webkit-linear-gradient(#ff003d, #3f4f84);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -709,16 +696,10 @@ a {
   float: left;
   width: 20%;
   height: 100%;
-  background-image: linear-gradient(to top, #fd154b 0%, #fa8f3d 150%);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-  rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-  rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
-  rgba(0, 0, 0, 0.06) 0px 2px 1px,
-  rgba(0, 0, 0, 0.09) 0px 4px 2px,
-  rgba(0, 0, 0, 0.09) 0px 8px 4px,
-  rgba(0, 0, 0, 0.09) 0px 16px 8px,
-  rgba(0, 0, 0, 0.09) 0px 32px 16px;
-
+  //background-image: linear-gradient(to top, #fd154b 0%, #fa8f3d 150%);
+  background-image: linear-gradient(to bottom, #9bd3cb, #129a7d);
+  font-family: Recoleta, serif;
+  font-weight: 600;
 }
 
 .sidebar-main {
@@ -739,7 +720,6 @@ a {
 .folder-tree-info {
   font-size: 0.9rem;
   font-style: italic;
-  //background-color: #ffb13f;
   width: 100%;
   border-radius: 0.3rem;
   margin: 3rem auto 0;
@@ -780,8 +760,10 @@ a {
 }
 
 .tree-node.clicked {
-  background-color: #283255;
-  color: white;
+  &:hover{
+    background-color: transparent;
+    opacity: 100%;
+  }
 }
 
 .tree-node:hover {
@@ -808,7 +790,7 @@ a {
 }
 
 .tree-node .node-name {
-  padding: 0 0.3rem;
+  height: 100%;
   border-radius: 0.3rem;
   transition: background-color ease-out 0.2s;
   margin-right: 0;
@@ -819,6 +801,8 @@ a {
 .tree-node .node-name.active {
   background-color: #283255;
   color: #fff;
+  box-shadow: 2px 2px 8px #09493CFF, -2px -2px 8px #DAFFF8FF;
+  padding: 1.3rem 0.5rem;
 }
 
 .tree-node .node-edit, .tree-node .node-delete {
@@ -848,10 +832,14 @@ a {
   float: left;
   width: 80%;
   height: 100%;
-  background-image: linear-gradient(to top left, #fd154b 0%, #fa8f3d 150%);
+  //background-image: linear-gradient(to top left, #fd154b 0%, #fa8f3d 150%);
+
+  background-image: linear-gradient(to bottom, #9bd3cb, #129a7d);
+
   /*background-image: linear-gradient(to bottom right, #fc9f6a, #fd154b);*/
   /*background-image: linear-gradient(to bottom right, #fc9f6a, #ee6c87);*/
   /*background-image: linear-gradient(to bottom right, #f8c3ce, #ee6c87);*/
+  box-shadow: rgba(0, 0, 0, 0.17) -10px 5px 25px 0px;
 }
 
 #tooltip-dbclick {
@@ -890,6 +878,7 @@ a {
   font-size: 10rem;
   padding-top: 10%;
   color: #000831;
+  //color: #1c233b;
   font-family: KaushanScript, serif;
 }
 
@@ -1037,7 +1026,6 @@ a {
   max-width: 100%;
   direction: ltr;
   background-color: #283255;
-  //background-color: #282c34;
   color: white;
   white-space: normal;
   -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(85%, transparent), to(rgba(255, 255, 255, 0.7)));
@@ -1103,7 +1091,8 @@ a {
 }
 
 .horizontal-scroll-group::-webkit-scrollbar-thumb {
-  background: #434343;
+  background: $scrollbar-dark-green;
+  box-shadow: none;
   border-radius: 10px;
 }
 
@@ -1138,7 +1127,6 @@ a {
 }
 
 .project-card:focus-within, .project-card:hover {
-  //transform: translateY(-1rem) rotate(3deg);
   transform: translateY(-1rem) rotate(-4deg);
   margin-right: 125px;
 }
@@ -1207,7 +1195,7 @@ a {
     padding-left: 1rem;
 
     .university-card {
-      color: #9fa4ba;
+      color: #c7cad7;
       position: relative;
       width: 30rem;
       margin-top: 8rem;
@@ -1436,7 +1424,7 @@ a {
   padding: 2rem 1rem;
   overflow-y: auto;
   overflow-x: auto;
-  max-height: 43.2rem;
+  max-height: 700px;
   font-family: JetBrainsMono, monospace;
   font-size: 0.8rem;
 }
@@ -1626,7 +1614,6 @@ a {
 .page-controls {
   position: absolute;
   bottom: 6%;
-  //left: 50%;
   background: white;
   transform: translateX(-50%);
   transition: opacity ease-in-out 0.2s;
@@ -1681,7 +1668,6 @@ a {
 
 .certificates-category {
   overflow: hidden;
-  //padding: 0 5rem;
   margin-bottom: 5rem;
 
   .certificates-items-wrapper {
@@ -1692,15 +1678,6 @@ a {
     overflow: hidden;
 
     width: 100%;
-
-    //@for $i from 1 through 4 {
-    //  @media screen and (max-width: 798px - $i*80) {
-    //    min-width: 600px - $i*80;
-    //    .certificates-item:nth-child(#{6-$i}) {
-    //      display: none;
-    //    }
-    //  }
-    //}
 
     .certificates-item {
       position: relative;
@@ -1727,6 +1704,7 @@ a {
         height: 35rem;
         cursor: pointer;
         opacity: 1;
+        box-shadow: 0.3rem 0.3rem 0.6rem #09493CFF, -0.2rem -0.2rem 0.5rem #9cfff4;
 
         &:hover{
           opacity: 0.5;
@@ -1764,25 +1742,13 @@ a {
   .professional-tab-main {
     position: relative;
     border-radius: 0.5rem;
-    background-color: #253253;
-    //overflow-x: hidden;
-    //overflow-y: auto;
-    //display: flex;
-    //align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 0.8rem;
-    //grid-auto-rows: minmax(auto, 49%);
     padding: 1rem 1rem 0;
   }
 
   .wint-wealth-exp {
-    //position: absolute;
-    //z-index: 5;
-    //top: 5%;
-    //left: 5%;
-    //width: 50%;
-    //height: 45%;
     height: auto;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
@@ -1792,15 +1758,23 @@ a {
     &:hover {
       box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
     }
+
+    &:before{
+      position: absolute;
+      content: "";
+      display: block;
+      width: 25px;
+      height: 25px;
+      background-image: url("./../images/shines.png");
+      background-size: 25px 25px;
+      background-repeat: no-repeat;
+      transform: rotate(-90deg);
+      left: -18px;
+      top: -20px;
+    }
   }
 
   .scatter-exp {
-    //position: absolute;
-    //z-index: 5;
-    //bottom: 5%;
-    //left: 5%;
-    //width: 50%;
-    //height: 45%;
     height: 65%;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
@@ -1813,11 +1787,6 @@ a {
   }
 
   .internship-exp {
-    //position: absolute;
-    //z-index: 5;
-    //top: 5%;
-    //right: 5%;
-    //width: 40%;
     grid-column: 2/3;
     grid-row: 1/3;
     height: 80%;
@@ -1832,6 +1801,20 @@ a {
 
     .exp-card-header {
       height: 5%;
+    }
+
+    &:before{
+      position: absolute;
+      content: "";
+      display: block;
+      width: 25px;
+      height: 25px;
+      background-image: url("./../images/shines.png");
+      background-size: 25px 25px;
+      background-repeat: no-repeat;
+      transform: rotate(90deg);
+      right: -18px;
+      bottom: -20px;
     }
   }
 
@@ -1910,7 +1893,7 @@ a {
 
     .my-story-inner {
       border-radius: 1rem;
-      background-color: #131d3d;
+      background: linear-gradient(330deg, #131d3d 0%, #243875 50%, #3553af 100%);
       transform: skewY(-5deg);
       overflow-x: hidden;
       overflow-y: auto;
@@ -1919,6 +1902,7 @@ a {
       font-size: 1.2rem;
       color: white;
       font-family: Recoleta, serif;
+      box-shadow: 0.8rem 0.8rem 1.4rem #09493CFF, -0.2rem -0.2rem 1.8rem #DAFFF8FF;
 
       &::-webkit-scrollbar {
         display: none;
@@ -2006,7 +1990,6 @@ a {
         .alien-text-wrapper {
           text-align: center;
           padding: 0 8rem;
-          //font-family: Recoleta, serif;
           font-family: DancingScript, serif;
 
           .alien-error-tag {
@@ -2034,7 +2017,6 @@ a {
           }
 
           .alien-back-button {
-            //background-color: #283255;
             background-color: #6d4d96;
             border-radius: 0.5rem;
             padding: 0.5rem;
@@ -2055,8 +2037,6 @@ a {
     &.grid-wrapper {
       display: grid;
       grid-template-rows: 1fr 1fr;
-      //align-items: center;
-      //justify-items: center;
     }
 
     div {
