--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -720,7 +720,7 @@ a {
   font-style: italic;
   width: 100%;
   border-radius: 0.3rem;
-  margin: 3rem auto 0;
+  margin: 1rem auto 0;
   padding: 0.5rem 0;
   text-align: center;
   font-weight: bold;
@@ -895,10 +895,11 @@ a {
   font-family: Recoleta, fantasy;
   color: #fd154b;
   font-weight: 800;
+  font-size: 1.2rem;
 }
 
 .footer-feet-right {
-  width: 20%;
+  width: 25%;
   float: left;
   padding: 58px 50px 10px 0;
   display: flex;
@@ -907,11 +908,12 @@ a {
   font-family: Recoleta, fantasy;
   color: #fd154b;
   font-weight: 800;
+  font-size: 1.2rem;
 }
 
 .footer-feet-center {
   float: left;
-  width: 60%;
+  width: 55%;
   padding: 58px 0 10px 0;
 }
 
@@ -1203,7 +1205,7 @@ a {
       .university-card-thumbnail {
         position: relative;
         height: 15rem;
-        background-color: #9fa4ba;
+        background-color: $pastel-light-green;
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
 
@@ -1248,12 +1250,36 @@ a {
             }
           }
         }
+
+        .thumbnail-fallback{
+          display: grid;
+          color: $scrollbar-dark-green;
+          align-items: center;
+          justify-content: center;
+          grid-auto-flow: row;
+
+          .fallback-emoji{
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            font-size: 5rem;
+          }
+          .fallback-text{
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            font-family: Recoleta, serif;
+            font-weight: bold;
+            padding-top: 1rem;
+          }
+        }
       }
 
       .university-card-header {
         height: 2.5rem;
         padding: 1rem 0 0 2rem;
         transition: color 0.3s ease 0.1s;
+        font-size: 1.2rem;
       }
 
       .university-footer-button {
@@ -1295,6 +1321,7 @@ a {
         display: none;
         padding: 0.5rem 0 0 2rem;
         transition: color 0.3s ease 0.1s;
+        font-size: 1.2rem;
 
         & div div {
           float: left;
@@ -1424,7 +1451,7 @@ a {
   overflow-x: auto;
   max-height: 700px;
   font-family: JetBrainsMono, monospace;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .ide-outer::-webkit-scrollbar {
@@ -1827,13 +1854,14 @@ a {
     align-items: center;
     padding: 1rem;
     font-family: JetBrains Mono, monospace;
+    font-size: 1.2rem;
   }
 
   .exp-card-body {
     width: 100%;
     height: 90%;
     padding: 0.5rem 0 0.5rem 1rem;
-    font-size: 0.8rem;
+    //font-size: 1rem;
     color: white;
     font-family: OperatorMono, monospace;
     word-break: break-all;
