--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -220,6 +220,7 @@ html, body, #___gatsby, #gatsby-focus-wrapper, .outer-body-wrapper {
 
 body {
   overflow-x: hidden;
+  background-color: #283255;
 }
 
 * {
@@ -308,7 +309,7 @@ a {
   }
 
   .sidebar-editor-footer .sidebar-editor {
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0 22px 70px 4px;
 
     .sidebar-wrapper {
       border-bottom-left-radius: 0.5rem;
