--- a/src/css/constants.scss
+++ b/src/css/constants.scss
@@ -2,3 +2,4 @@ $pastel-light-green: #9bd3cb;
 $pastel-dark-green: #129a7d;
 $scrollbar-dark-green: #0b5646;
 $scrollbar-light-green: #9bd3cb;
+$blog-blue: #283255;
